# src/core/ent/migrate/schema.go
@@ -24,6 +24,7 @@ var (
 		{Name: "created_at", Type: field.TypeTime},
 		{Name: "updated_at", Type: field.TypeTime},
 		{Name: "last_full_refresh", Type: field.TypeTime},
+		{Name: "entity_id", Type: field.TypeString, Nullable: true},
 	}
 	// AgentsTable holds the schema information for the "agents" table.
 	AgentsTable = &schema.Table{
